bad/class_field_redefinition_other_decl.example_compiler_output
ERROR
[1mbad/class_field_redefinition_other_decl.lat:5:15: [1;31merror: [0;1mclass cannot contain two fields with the same name[m
	string x, y, abc;
	             [1;32m^[m
[1mbad/class_field_redefinition_other_decl.lat:3:6: [1;34mnote: [0;1mprevious declaration is here[m
	int abc;
	    [1;32m^[m
